@@ -15,6 +15,7 @@ and ideas to make this software available.
 	Leif Hedstrom <leif@netscape.com>
 	Emile Heitor <eheitor@isdnet.net>
 	Szymon Juraszczyk <szymon@ssk.pl>
+	Anselm Kruis <kruis@till-photonics.com>
 	Joe Little <jlittle@open-it.org>
 	Phillip Liu <phillip@loudcloud.com>
 	Jeff Mandel <jeff.mandel@probes.com>
