@@ -2,7 +2,7 @@ AC_INIT(ldap-nss.c)
 AC_CANONICAL_SYSTEM
 AC_PREFIX_DEFAULT()
 
-AM_INIT_AUTOMAKE(nss_ldap, 149)
+AM_INIT_AUTOMAKE(nss_ldap, 150)
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
@@ -118,6 +118,7 @@ if test "$need_pthread" = "true"; then
 fi
 
 AC_CHECK_FUNCS(ldap_init ldapssl_client_init ldap_start_tls_s ldap_get_lderrno ldap_parse_result ldap_memfree ldap_controls_free ldap_ld_free ldap_explode_rdn ldap_set_option ldap_get_option)
+AC_CHECK_FUNCS(ldap_initialize)
 AC_CHECK_FUNCS(gethostbyname_r)
 
 if test "$ac_cv_func_gethostbyname_r" = "yes"; then
