@@ -10,6 +10,14 @@
 # Your LDAP server. Must be resolvable without using LDAP.
 host 127.0.0.1
 
+# Another way to specify your LDAP server is to provide an
+# uri with the server name. This allows to use
+# Unix Domain Sockets to connect to a local LDAP Server.
+# uri ldap://127.0.0.1/
+# uri ldaps://127.0.0.1/
+# uri ldapi://%2fvar%2frun%2fldapi_sock/
+# Note: %2f encodes the '/' used as directory separator
+
 # The distinguished name of the search base.
 base dc=padl,dc=com
 
